--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "tailgrids": "^2.2.7",
     "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^4.0.9"
   }
 }
